i can see the output

--- a/app/templates/syllabus_preview.html
+++ b/app/templates/syllabus_preview.html
@@ -205,6 +205,12 @@
                class="btn btn-outline-secondary">
                 Re-upload
             </a>
+            <div class="mt-4 text-end">
+                <a href="/syllabus/plan/{{ syllabus._id }}"
+                class="btn btn-success btn-lg">
+                    🚀 View Generated Study Plan
+                </a>
+            </div>
         </div>
 
     </div>
